--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - composer self-update
   - composer install --no-interaction
   - cp .env.travis .env
+  - php artisan key:generate
   - pear install pear/PHP_CodeSniffer
   - phpenv rehash
   - nvm install 7.7.1
