Add database.sqlite to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ cache:
     - vendor
 
 script:
+  - touch database/database.sqlite
   - vendor/bin/phpunit --coverage-text
 #  - phpcs --ignore=app/Http/Controllers/Auth,app/Http/Controllers/Controller.php app/Http/Controllers
   - npm run production
