--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - composer self-update
   - composer install --no-interaction
   - cp .env.travis .env
-#  - pear install pear/PHP_CodeSniffer
+  - pear install pear/PHP_CodeSniffer
   - phpenv rehash
   - php artisan key:generate
   - touch database/database.sqlite
