--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,6 @@ cache:
 
 script:
   - vendor/bin/phpunit --coverage-text
-  - phpcs --ignore=app/Http/Controllers/Auth,app/Http/Controllers/Controller.php app/Http/Controllers
+  - phpcs --ignore=app/Http/Controllers/Auth,app/Http/Controllers/Controller.php app/Http/Controllers --ignore-annotations
   - npm run production
   - jshint resources/js/*
