--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - composer self-update
   - composer install --no-interaction
   - cp .env.travis .env
-  - pear install pear/PHP_CodeSniffer
+#  - pear install pear/PHP_CodeSniffer
   - phpenv rehash
   - php artisan key:generate
   - touch database/database.sqlite
@@ -33,6 +33,6 @@ cache:
 
 script:
   - vendor/bin/phpunit --coverage-text
-  - phpcs --ignore=app/Http/Controllers/Auth,app/Http/Controllers/Controller.php app/Http/Controllers --ignore-annotations
+#  - phpcs --ignore=app/Http/Controllers/Auth,app/Http/Controllers/Controller.php app/Http/Controllers
   - npm run production
   - jshint resources/js/*
